--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   db:
     image: postgres
-    restart: always
+    restart: no
     environment:
       POSTGRES_PASSWORD: secret
       POSTGRES_USER: postgres
