--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,22 @@
 version: '3'
 services:
+#  app:
+#    image: registry.gitlab.com/ramdanariadi/grocery
+#    depends_on:
+#      - db
+#    networks:
+#      - tunas-network
+#    ports:
+#      - "8080:8080"
   db:
     image: postgres
     environment:
       POSTGRES_PASSWORD: secret
       POSTGRES_USER: postgres
-      POSTGRES_DB: DBTunasKasir
+      POSTGRES_DB: DBTunasGrocery
       PGDATA: /var/lib/postgresql/data/ecomerce
     ports:
-      - 5432:5432
+      - "5432:5432"
     volumes:
       - tunas_pgdb_data:/var/lib/postgresql/data/ecomerce
     networks:
