--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=secret
-spring.datasource.url=jdbc:postgresql://localhost:5432/DBTunasKasir?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/DBTunasGrocery?createDatabaseIfNotExist=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
