--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
 #    ports:
 #      - "8080:8080"
   db:
-    image: postgres
+    image: postgres:13
     environment:
       POSTGRES_PASSWORD: secret
       POSTGRES_USER: postgres
