--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=postgres
-spring.datasource.password=secret
-spring.datasource.url=jdbc:postgresql://localhost:5432/DBTunasGrocery?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:postgresql:///${DBNAME}?unixSocketPath=${UNIX_SOCKET_PATH}&cloudSqlInstance=${CLOUD_SQL_INSTANCE}&socketFactory=com.google.cloud.sql.postgres.SocketFactory&user=${DB_USER}&password=${DB_PASS}&useSSL=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
