--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,23 @@ services:
       - tunas_pgdb_data:/var/lib/postgresql/data/ecomerce
     networks:
       - tunas-network
+  mongo:
+    image: mongo:5.0.6
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+      MONGO_INITDB_DATABASE: tunasReport
+    volumes:
+      - tunas_collection:/etc/mongo
+    ports:
+      - "27017:27017"
+  redis:
+    image: redis:alpine3.15
+    volumes:
+      - tunas_cache:/data
+    ports:
+      - "6379:6379"
   rabbitmq:
     image: rabbitmq:3-management
     environment:
@@ -27,3 +44,5 @@ networks:
 
 volumes:
   tunas_pgdb_data:
+  tunas_collection:
+  tunas_cache:
