--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     environment:
       POSTGRES_PASSWORD: secret
       POSTGRES_USER: postgres
-      POSTGRES_DB: DBTunasGrocery
+      POSTGRES_DB: grocery
       PGDATA: /var/lib/postgresql/data/ecomerce
     ports:
       - "5432:5432"
