--- a/manifest/database-deployment.yaml
+++ b/manifest/database-deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   name: grocery-persistent-volume-claim
 spec:
   volumeName: grocery-persistent-volume
-  storageClassName: do-block-storage
+  storageClassName: standard
   accessModes:
     - ReadWriteOnce
   resources:
