--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
-spring.jpa.properties.hibernate.default_schema=main
+spring.datasource.url=${JDB_URL}
+spring.datasource.username=${JDBC_USERNAME}
+spring.datasource.password=${JDBC_PASSWORD}
+spring.jpa.properties.hibernate.default_schema=${DB_SCHEMA}
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
