--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=${JDB_URL}
+spring.datasource.url=${JDBC_URL}
 spring.datasource.username=${JDBC_USERNAME}
 spring.datasource.password=${JDBC_PASSWORD}
 spring.jpa.properties.hibernate.default_schema=${DB_SCHEMA}
@@ -10,3 +10,5 @@ spring.jpa.properties.hibernate.format_sql=true
 
 server.error.include-message=always
 
+grpc.host=${GRPC_SERVER_HOST}
+grpc.port=${GRPC_SERVER_PORT}
