--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,34 @@
 version: '3'
 services:
+  user-service:
+    image: grocer-user-service
+    ports:
+      - "8080:8080"
+    environment:
+      GRPC_SERVER_HOST: product-service
+      GRPC_SERVER_PORT: 50051
+      JDBC_USERNAME: postgres
+      JDBC_PASSWORD: secret
+      JDBC_URL: jdbc:postgresql://db:5432/grocery-product-service
+      DB_SCHEMA: public
+    links:
+      - product-service
+      - db
+    networks:
+      - tunas-network
+  product-service:
+    image: grocery-product-service
+    ports:
+      - "127.0.0.1:50051:50051"
+    environment:
+      DB_USER: postgres
+      DB_PASS: secret
+      DB_NAME: grocery-product-service
+      DB_HOST: db
+    networks:
+      - tunas-network
+    links:
+      - db
   db:
     image: postgres:13
     environment:
