--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   user-service:
-    image: grocer-user-service
+    image: grocery-user-service
     ports:
       - "8080:8080"
     environment:
@@ -21,7 +21,7 @@ services:
     ports:
       - "127.0.0.1:50051:50051"
     environment:
-      DB_USER: postgres
+      DB_USERNAME: postgres
       DB_PASS: secret
       DB_NAME: grocery-product-service
       DB_HOST: db
