--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+
+### DATABASE ###
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=
 spring.datasource.username=
@@ -10,3 +12,8 @@ spring.jpa.properties.hibernate.format_sql=true
 
 server.error.include-message=always
 
+application.domain=core-service
+
+### KAFKA ###
+spring.kafka.bootstrap-servers=
+messaging.outgoing.export-report-request.topic=${application.domain}-export-report-request
