update application.properties, set kafka & s3 config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,8 @@ application.domain=core-service
 ### KAFKA ###
 spring.kafka.bootstrap-servers=
 messaging.outgoing.export-report-request.topic=${application.domain}-export-report-request
+messaging.outgoing.export-report-result.topic=${application.domain}-export-report-result
+
+### AWS ###
+aws.region=
+aws.s3.bucket.name=
